--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@
         padding: 0;
     }
     
-    .especifications:active .button {
+    .especifications:hover .button {
         background-color: var(--very-dark-cyan);
         margin: 0;
         padding: 0;
