--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@
         padding: 0;
     }
     
-    .especifications:hover .button {
+    .especifications .button:hover {
         background-color: var(--very-dark-cyan);
         margin: 0;
         padding: 0;
